# anime-character-recognition

./: '  .gitignore  AGENTS.md  LEARNING_LOG.md  README.md  anki.csv  dataset_manifest.csv  pyproject.toml
src/anime_character_recognition/: __init__.py  cli.py  data.py  dataset.py  loaders.py  model.py
tests/: test_data.py  test_dataloaders.py  test_dataset.py  test_model.py  test_package.py
