[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-character-recognition"
version = "0.1.0"
description = "A learning project for anime character image classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
